--- a/i3status.conf
+++ b/i3status.conf
@@ -13,6 +13,7 @@ general {
 
 # order += "ipv6"
 order += "disk /"
+order += "disk /home"
 # order += "wireless _first_"
 order += "ethernet _first_"
 order += "volume master"
@@ -47,4 +48,8 @@ load {
 
 disk "/" {
         format = "%avail"
+}
+
+disk "/home" {
+    format = "%avail"
 }
