Polybar and some ranger commands

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -211,3 +211,6 @@ set clear_filters_on_dir_change false
 
 # Disable displaying line numbers in main column
 set line_numbers false
+
+# Move file to trash
+map DD shell mv %s /home/${USER}/.local/share/Trash/files/
