--- a/i3/config
+++ b/i3/config
@@ -163,11 +163,5 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-}
-
-exec --no-startup-id "devmon --no-gui"
-
+# Polybar init
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
