--- a/polybar/config
+++ b/polybar/config
@@ -50,10 +50,10 @@ module-margin-right = 2
 
 font-0 = fixed:pixelsize=9;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=9;1
+font-2 = WunconSiji:pixelsize=10;0
 
 modules-left = bspwm i3
-modules-right = filesystem xbacklight volume memory cpu battery temperature date
+modules-right = volume filesystem xbacklight memory cpu battery temperature popup-calendar
 
 tray-position = right
 tray-padding = 2
@@ -158,9 +158,7 @@ type = internal/cpu
 format = <label> <ramp-coreload>
 
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
-label = CPU %percentage%%
+label = %percentage%%
 
 ; Spacing between individual per-core ramps
 ramp-coreload-spacing = 1
@@ -179,9 +177,7 @@ type = internal/memory
 format = <label> <bar-used>
 
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
-label = RAM %percentage_used%%
+label = %percentage_used%%
 
 ; Only applies if <bar-used> is used
 bar-used-indicator =
@@ -194,24 +190,6 @@ bar-used-fill = ▐
 bar-used-empty = ▐
 bar-used-empty-foreground = #444444
 
-[module/date]
-type = internal/date
-interval = 1.0
-
-date =
-date-alt = " %Y-%m-%d"
-
-time = %H:%M
-time-alt = %H:%M:%S
-
-format = 🕓 <label>
-
-format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
-
-label = %date% %time%
-
 [module/volume]
 type = internal/volume
 
@@ -221,7 +199,7 @@ label-volume-foreground = ${root.foreground}
 
 format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
+label-muted = muted
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
@@ -274,7 +252,6 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp> <label>
-format-underline = #f50a4d
 format-warn = <ramp> <label-warn>
 format-warn-underline = ${self.format-underline}
 
@@ -282,10 +259,9 @@ label = %temperature%
 label-warn = %temperature%
 label-warn-foreground = ${colors.secondary}
 
-ramp-0 = A
-ramp-1 = B
-ramp-2 = C
-ramp-foreground = #55
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
 
 [settings]
 screenchange-reload = true
@@ -299,3 +275,9 @@ margin-top = 1
 margin-bottom = 1
 
 ; vim:ft=dosini
+
+[module/popup-calendar]
+type = custom/script
+exec = ~/.config/polybar/popup-calendar.sh
+interval = 1
+click-left = ~/.config/polybar/popup-calendar.sh --popup
