--- a/polybar/config
+++ b/polybar/config
@@ -155,29 +155,41 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 
-format = <label> <ramp-coreload>
+format = <ramp-coreload>
 
 format-prefix = " "
-label = %percentage%%
 
-; Spacing between individual per-core ramps
-ramp-coreload-spacing = 1
 ramp-coreload-0 = ▁
+ramp-coreload-0-font = 2
+ramp-coreload-0-foreground = #aaff77
 ramp-coreload-1 = ▂
+ramp-coreload-1-font = 2
+ramp-coreload-1-foreground = #aaff77
 ramp-coreload-2 = ▃
+ramp-coreload-2-font = 2
+ramp-coreload-2-foreground = #aaff77
 ramp-coreload-3 = ▄
+ramp-coreload-3-font = 2
+ramp-coreload-3-foreground = #aaff77
 ramp-coreload-4 = ▅
+ramp-coreload-4-font = 2
+ramp-coreload-4-foreground = #fba922
 ramp-coreload-5 = ▆
+ramp-coreload-5-font = 2
+ramp-coreload-5-foreground = #fba922
 ramp-coreload-6 = ▇
+ramp-coreload-6-font = 2
+ramp-coreload-6-foreground = #ff5555
 ramp-coreload-7 = █
+ramp-coreload-7-font = 2
+ramp-coreload-7-foreground = #ff5555
 
 [module/memory]
 type = internal/memory
 
-format = <label> <bar-used>
+format = <bar-used>
 
 format-prefix = " "
-label = %percentage_used%%
 
 ; Only applies if <bar-used> is used
 bar-used-indicator =
@@ -186,8 +198,8 @@ bar-used-foreground-0 = #55aa55
 bar-used-foreground-1 = #557755
 bar-used-foreground-2 = #f5a70a
 bar-used-foreground-3 = #ff5555
-bar-used-fill = ▐
-bar-used-empty = ▐
+bar-used-fill = |
+bar-used-empty = |
 bar-used-empty-foreground = #444444
 
 [module/volume]
