--- a/polybar/config
+++ b/polybar/config
@@ -1,46 +1,22 @@
-;=====================================================
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/jaagr/polybar
-;
-;   The README contains alot of information
-;
-;=====================================================
-
 [colors]
-;background = ${xrdb:color0:#222}
 background = #222
 background-alt = #444
-;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
 foreground-alt = #555
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-# [modules/xmenu]
-# menu-0 = item 1;command
-# menu-0-0 = sub-item 1.1;command
-# menu-0-1 = sub-item 1.2;command
-# menu-0-2 = sub-item 1.3;command
-# menu-1 = item 2;command
-# menu-1-0 = sub-item 2.1;command
-# menu-1-1 = sub-item 2.2;command
-
 [bar/example]
 monitor = ${env:MONITOR:}
 width = 100%
 height = 20
-;offset-x = 1%
-;offset-y = 1%
-# radius = 6.0
 fixed-center = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 2
-line-color = #f00
 
 padding-left = 0
 padding-right = 2
@@ -51,25 +27,60 @@ module-margin-right = 2
 font-0 = fixed:pixelsize=9;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = WunconSiji:pixelsize=10;0
+font-3 = "FontAwesome:size=10;0"
 
 modules-left = bspwm i3
-modules-right = volume filesystem xbacklight memory cpu battery temperature popup-calendar
+modules-right = wired-network wireless-network pacman-updates volume filesystem xbacklight memory cpu temperature battery popup-calendar
 
 tray-position = right
 tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
 
-;wm-restack = bspwm
-;wm-restack = i3
+; The separator will be inserted between the output of each module
+separator = | 
 
-;override-redirect = true
+[module/pacman-updates]
+type = custom/script
+;exec = pacman -Qu | wc -l
+exec = pacman -Qu | wc -l
+interval = 1000
+label = %output%
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+format-prefix = " "
+format-prefix-foreground = #FFBB00
 
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
+[module/wired-network]
+type = internal/network
+interface = enp3s0
+interval = 1.0
 
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
+format-connected-prefix = 
+label-connected = ↑%upspeed% ↓%downspeed%
+
+format-disconnected =
+
+[module/wireless-network]
+type = internal/network
+interface = wlp5s0
+interval = 1.0
+ping-interval = 10
+
+format-connected = <ramp-signal> <label-connected>
+label-connected = %local_ip%    %downspeed%    %upspeed%
+label-disconnected =    not connected
+label-disconnected-foreground = #66
+
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+
+animation-packetloss-0 = 
+animation-packetloss-0-foreground = #ffa64c
+animation-packetloss-1 = 
+animation-packetloss-1-foreground = ${bar/top.foreground}
+animation-packetloss-framerate = 500
 
 [module/filesystem]
 type = internal/fs
@@ -79,7 +90,7 @@ spacing = 4
 mount-0 = /
 mount-1 = /home
 
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-mounted = %{F#84b3ff}%mountpoint%%{F-}: %free%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
@@ -110,26 +121,25 @@ index-sort = true
 wrapping-scroll = false
 
 pin-workspaces = true
-ws-icon-default = ♜
 
 label-mode-padding = 2
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
-# label-focused = F %index%
+label-focused = %index%
 label-focused-background = ${module/bspwm.label-focused-background}
-label-focused-underline = ${module/bspwm.label-focused-underline}
+label-focused-underline = #ddd
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
-# label-unfocused = U %index%
+label-unfocused = %index%
 label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
-# label-visible = V %index%
+label-visible = %index%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-background}
 label-visible-padding = ${self.label-focused-padding}
 
-# label-urgent = %index%!
+label-urgent = %index%!
 label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
@@ -204,31 +214,18 @@ bar-used-empty-foreground = #444444
 
 [module/volume]
 type = internal/volume
+;speaker-mixer = Speaker
+;headphone-mixer = Headphone
+:headphone-id = 9
 
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL
-label-volume-foreground = ${root.foreground}
+format-volume = <ramp-volume> <label-volume>
+label-muted =  muted
+label-muted-foreground = #66
 
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = muted
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
 
 [module/battery]
 type = internal/battery
@@ -259,21 +256,22 @@ animation-charging-framerate = 750
 
 [module/temperature]
 type = internal/temperature
-interval = 0.5
-thermal-zone = 0
-warn-temperature = 60
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon0/temp1_input
+thermal-zone = 5
+warn-temperature = 70
 
 format = <ramp> <label>
 format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
 
 label = %temperature%
-label-warn = %temperature%
-label-warn-foreground = ${colors.secondary}
+label-warn =  %temperature%
+label-warn-foreground = #c7254f
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
 
 [settings]
 screenchange-reload = true
