--- a/polybar/config
+++ b/polybar/config
@@ -30,7 +30,7 @@ font-2 = WunconSiji:pixelsize=10;0
 font-3 = "FontAwesome:size=10;0"
 
 modules-left = bspwm i3
-modules-right = wired-network wireless-network pacman-updates volume filesystem xbacklight memory cpu temperature battery popup-calendar
+modules-right = wired-network wireless-network battery volume filesystem xbacklight memory cpu temperature temperature_laptop  popup-calendar
 
 tray-position = right
 tray-padding = 2
@@ -54,10 +54,9 @@ type = internal/network
 interface = enp3s0
 interval = 1.0
 
-format-connected-prefix = 
-label-connected = ↑%upspeed% ↓%downspeed%
-
-format-disconnected =
+format-connected-prefix = 
+label-connected = %essid%
+format-disconnected =  not connected
 
 [module/wireless-network]
 type = internal/network
@@ -66,21 +65,15 @@ interval = 1.0
 ping-interval = 10
 
 format-connected = <ramp-signal> <label-connected>
-label-connected = %local_ip%    %downspeed%    %upspeed%
-label-disconnected =    not connected
-label-disconnected-foreground = #66
+label-connected = %essid%
+label-disconnected =  not connected
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-
-animation-packetloss-0 = 
-animation-packetloss-0-foreground = #ffa64c
-animation-packetloss-1 = 
-animation-packetloss-1-foreground = ${bar/top.foreground}
-animation-packetloss-framerate = 500
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-5 = 
 
 [module/filesystem]
 type = internal/fs
@@ -91,7 +84,7 @@ mount-0 = /
 mount-1 = /home
 
 label-mounted = %{F#84b3ff}%mountpoint%%{F-}: %free%
-label-unmounted = %mountpoint% not mounted
+label-unmounted =
 label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
@@ -229,34 +222,47 @@ ramp-volume-3 = 
 
 [module/battery]
 type = internal/battery
-battery = BAT0
-adapter = ADP1
+battery = BAT1
+adapter = ACAD
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
 
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 
 [module/temperature]
 type = internal/temperature
 hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon0/temp1_input
+thermal-zone = 5
+warn-temperature = 70
+
+format = <ramp> <label>
+format-warn = <ramp> <label-warn>
+
+label = %temperature%
+label-warn =  %temperature%
+label-warn-foreground = #c7254f
+
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+
+[module/temperature_laptop]
+type = internal/temperature
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon1/temp2_input
 thermal-zone = 5
 warn-temperature = 70
 
