--- a/polybar/config
+++ b/polybar/config
@@ -84,7 +84,7 @@ interface = enp3s0
 interval = 1.0
 
 format-connected-prefix = 
-label-connected = %essid%
+label-connected = " "
 format-disconnected =  not connected
 
 [module/wireless-network]
