--- a/polybar/config
+++ b/polybar/config
@@ -27,7 +27,7 @@ module-margin-right = 2
 
 font-0 = fixed:pixelsize=9;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = WunconSiji:pixelsize=10;0
+font-2 = Siji:pixelsize=10;0
 font-3 = "FontAwesome:size=10;0"
 
 modules-left = i3
@@ -57,7 +57,7 @@ module-margin-right = 2
 
 font-0 = fixed:pixelsize=9;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = WunconSiji:pixelsize=10;0
+font-2 = Siji:pixelsize=10;0
 font-3 = "FontAwesome:size=10;0"
 
 modules-left = filesystem
@@ -126,20 +126,31 @@ label-mode-padding = 2
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
-label-focused = %index%
+label-focused = %icon%
 label-focused-background = ${colors.background-alt}
 label-focused-padding = 2
 
-label-unfocused = %index%
+label-unfocused = %icon%
 label-unfocused-padding = 2
 
-label-visible = %index%
+label-visible = %icon%
 label-visible-background = ${colors.background-not-focused}
 label-visible-padding = ${self.label-focused-padding}
 
-label-urgent = %index%!
+label-urgent = %icon%!
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
+
+ws-icon-0 = 1;I
+ws-icon-1 = 2;II
+ws-icon-2 = 3;III
+ws-icon-3 = 4;IV
+ws-icon-4 = 5;V
+ws-icon-5 = 6;VI
+ws-icon-6 = 7;VII
+ws-icon-7 = 8;VIII
+ws-icon-8 = 9;IX
+ws-icon-9 = 10;X
 
 [module/xbacklight]
 type = internal/xbacklight
@@ -251,7 +262,7 @@ thermal-zone = 5
 warn-temperature = 70
 
 format = <ramp> <label>
-format-warn = <ramp> <label-warn>
+format-warn = <label-warn>
 
 label = %temperature%
 label-warn =  %temperature%
@@ -270,7 +281,7 @@ thermal-zone = 5
 warn-temperature = 70
 
 format = <ramp> <label>
-format-warn = <ramp> <label-warn>
+format-warn = <label-warn>
 
 label = %temperature%
 label-warn =  %temperature%
