--- a/i3/config
+++ b/i3/config
@@ -181,14 +181,17 @@ bindsym $mod+button3 floating toggle
 bindsym button9 move left
 bindsym button8 move right
 
+# Load some programmes on boot
+exec --no-startup-id ~/.config/i3/boot.sh
+
+# Wallpaper
+exec --no-startup-id $set_wallpaper
+
 # Polybar init
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # For popup calendar
 for_window [class="Yad"] floating enable
-
-# Wallpaper
-exec --no-startup-id $set_wallpaper
 
 # Start compton
 exec --no-startup-id compton
