--- a/polybar/config
+++ b/polybar/config
@@ -1,260 +1,1 @@
-[colors]
-background = #aa000000
-background-alt = #777
-background-not-focused = #333
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
-
-[bar/upper_bar]
-monitor = ${env:MONITOR:}
-width = 100%
-height = 20
-fixed-center = false
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 2
-
-padding-left = 0
-padding-right = 2
-
-module-margin-left = 2
-module-margin-right = 2
-
-font-0 = fixed:pixelsize=9;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = Siji:pixelsize=10;0
-font-3 = "FontAwesome:size=10;0"
-
-modules-left = i3
-modules-right = memory cpu temperature filesystem wired-network wireless-network battery volume xbacklight popup-calendar
-
-tray-position = right
-tray-padding = 2
-
-bottom = false
-
-[module/menu-apps]
-type = custom/menu
-
-label-open = Menu
-label-close = Close
-
-; Optional item separator
-label-separator = " | "
-
-expand-right = true
-
-;pcmanfc
-menu-0-0 = " Files "
-menu-0-0-exec = pcmanfm &
-menu-0-0-foreground = ${colors.foreground}
-; rofi
-menu-0-1 = " Menu "
-menu-0-1-exec = rofi -show run
-menu-0-1-foreground = ${colors.foreground}
-; reboot
-menu-0-2 = "  "
-menu-0-2-exec = systemctl reboot
-menu-0-2-foreground = ${colors.foreground}
-; shutdown
-menu-0-3 = "  "
-menu-0-3-exec = systemctl poweroff
-menu-0-3-foreground = ${colors.foreground}
-
-[module/wired-network]
-type = internal/network
-interface = enp42s0
-interval = 1.0
-
-format-connected-prefix = 
-label-connected = " "
-format-disconnected =  not connected
-
-[module/wireless-network]
-type = internal/network
-interface = wlp5s0
-interval = 1.0
-ping-interval = 10
-
-format-connected = <ramp-signal> <label-connected>
-label-connected = %essid%
-label-disconnected =  not connected
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-5 = 
-
-[module/filesystem]
-type = internal/fs
-fixed-values = true
-spacing = 4
-
-mount-0 = /
-mount-1 = /home
-
-label-mounted = %{F#84b3ff}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted =
-label-unmounted-foreground = ${colors.foreground-alt}
-
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-wrapping-scroll = false
-
-pin-workspaces = true
-
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
-
-label-focused = %icon%
-label-focused-background = ${colors.background-alt}
-label-focused-padding = 2
-
-label-unfocused = %icon%
-label-unfocused-padding = 2
-
-label-visible = %icon%
-label-visible-background = ${colors.background-not-focused}
-label-visible-padding = ${self.label-focused-padding}
-
-label-urgent = %icon%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
-
-ws-icon-0 = 1;1
-ws-icon-1 = 2;2
-ws-icon-2 = 3;3
-ws-icon-3 = 4;4
-ws-icon-4 = 5;5
-ws-icon-5 = 6;6
-ws-icon-6 = 7;7
-ws-icon-7 = 8;8
-ws-icon-8 = 9;9
-ws-icon-9 = 10;0
-
-[module/xbacklight]
-type = internal/xbacklight
-card = intel_backlight
-
-format = <ramp>
-
-ramp-0 = 🌕
-ramp-1 = 🌔
-ramp-2 = 🌓
-ramp-3 = 🌒
-ramp-4 = 🌑
-
-
-[module/backlight-acpi]
-inherit = module/xbacklight
-type = internal/backlight
-card = intel_backlight
-
-[module/cpu]
-type = internal/cpu
-format = <label>
-label = CPU %percentage%%
-
-[module/memory]
-type = internal/memory
-format = <label>
-label = RAM %percentage_used%%
-
-[module/volume]
-type = internal/volume
-;speaker-mixer = Speaker
-;headphone-mixer = Headphone
-:headphone-id = 9
-
-format-volume = <ramp-volume> <label-volume>
-label-muted =  muted
-label-muted-foreground = #66
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-
-[module/battery]
-type = internal/battery
-battery = BAT1
-adapter = ACAD
-full-at = 98
-
-format-charging = <animation-charging> <label-charging>
-
-format-discharging = <ramp-capacity> <label-discharging>
-
-format-full-prefix = " "
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-framerate = 750
-
-[module/temperature]
-type = internal/temperature
-hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon0/temp2_input 
-thermal-zone = 5
-warn-temperature = 70
-
-format = <ramp> <label>
-format-warn = <label-warn>
-
-label = %temperature%
-label-warn =  %temperature%
-label-warn-foreground = #c7254f
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-
-[module/temperature_laptop]
-type = internal/temperature
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon1/temp2_input
-thermal-zone = 5
-warn-temperature = 70
-
-format = <ramp> <label>
-format-warn = <label-warn>
-
-label = %temperature%
-label-warn =  %temperature%
-label-warn-foreground = #c7254f
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
-
-[global/wm]
-margin-top = 1
-margin-bottom = 1
-
-[module/popup-calendar]
-type = custom/script
-exec = ~/.config/polybar/popup-calendar.sh
-interval = 1
-click-left = ~/.config/polybar/popup-calendar.sh --popup
-
+/home/nejc/arch-dotfiles/polybar/config.ini
