polybar date and time format

--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -25,30 +25,29 @@ type = internal/date
 
 interval = 1.0
 
-time = %I:%M %p
-time-alt = %Y-%m-%d%
+time = %H:%M
+date = %d.%m.%Y
 
 format = <label>
 format-background = ${color.mf} 
 format-foreground = ${color.fg}
 format-padding = 1
  
-label = %time%
+label = %time% %date%
 
 [module/date_i]
 type = internal/date
 
 interval = 1.0
 
-time = 
-time-alt = 
+date = 
 
 format = <label>
 format-background = ${color.amber} 
 format-foreground = ${color.fg}
 format-padding = 1
  
-label = %time%
+label = %date%
 
 [module/filesystem]
 type = internal/fs
