polybar small fix

--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -173,7 +173,7 @@ label-disconnected = "Disconnected"
 
 [module/network_i]
 type = internal/network
-interface = enp42s0
+interface = enp40s0
 
 interval = 1.0
 accumulate-stats = true
@@ -191,8 +191,8 @@ format-disconnected-padding = 1
 
 label-disconnected = 
 
-ramp-signal-0 = 
-ramp-signal-1 = 
+ramp-signal-0 = 
+ramp-signal-1 = 
 ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
